<resources>
    <string name="app_name">Github App Users</string>
    <string name="searching">Searching</string>
    <string name="user_name">UN</string>
    <string name="detailinfo">Info</string>
    <string name="username">UN</string>
    <string name="pp">Gambar pp</string>
    <string name="fullname">Fullname</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repost">Repost</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="start_searching">Start your searching now !</string>
    <string name="loading">Loading...</string>
    <string name="tab_1">Following</string>
    <string name="tab_2">Follower</string>
    <string name="favorit">Add to Favourite</string>
    <string name="change_language_settings">Change Language </string>
    <string name="settings">Settings</string>
    <string name="your_favorite">Favorites</string>
    <string name="no_data">No data</string>
    <string name="delete_data">Data already deleted</string>
    <string name="add_favorit">Add to favorite</string>
    <string name="delete_favorit">Delete from favorite</string>
    <string name="dark">Switch to Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>